Fixed CSS a lil more, box still wrong size but idgaf

--- a/styles.css
+++ b/styles.css
@@ -129,8 +129,8 @@ em {
 /* Colors */
 .colors div {
     display: inline-block;
-    padding: 100px 200px;
-    margin: 10px 20px;
+    padding: 100px;
+    margin: 10px;
     text-align: center;
 }
 .fonts div{
